--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
+# Node Modules
 node_modules
 
-/.cache
+# Builds 
 /build
 /public/build
+
+# Environments
 .env
+
+#Caches
+/.cache
+.eslintcache
